--- a/templates/home.html
+++ b/templates/home.html
@@ -63,7 +63,7 @@
         <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aperiam laboriosam, fugit quidem dolores minus eum alias vitae atque similique est, quod quibusdam facilis voluptates obcaecati, ullam unde quasi ut?
         Possimus amet, hic accusamus praesentium perferendis aliquid laboriosam natus! Aspernatur aperiam a libero voluptatem. Impedit ut sapiente corporis corrupti tempore molestiae exercitationem unde fuga, doloremque autem suscipit minus possimus beatae?
         Dignissimos enim eligendi cum, maiores eius reiciendis sint. Doloribus, aperiam distinctio! Numquam ab autem molestias voluptas magnam assumenda. Non libero, corporis ratione mollitia reprehenderit eius necessitatibus nemo voluptatum odio dicta!</p>
-        <h2>Open Positions</h2>
+        <h2>Job Openings</h2>
         <div>
             {% for job in jobs %}
                 {% include 'jobitem.html' %}
